WIP prepare for Identity Authentication

--- a/src/RaidManager.Infrastructure/RaidManager.Infrastructure.csproj
+++ b/src/RaidManager.Infrastructure/RaidManager.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RaidManager.Domain\RaidManager.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
