Just build to see it seems good ... but not functional ok !

--- a/src/RaidManager.WebApi/RaidManager.WebApi.csproj
+++ b/src/RaidManager.WebApi/RaidManager.WebApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RaidManager.Domain\RaidManager.Domain.csproj" />
+    <ProjectReference Include="..\RaidManager.Infrastructure\RaidManager.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
