--- a/src/RaidManager.WebApi/appsettings.json
+++ b/src/RaidManager.WebApi/appsettings.json
@@ -6,5 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataBaseConfiguration" : {
+    "ConnectionString" : "",
+    "QueriesConfiguration" :{
+      "Folder" : "",
+      "UserQueriesConfiguration" :{
+        "InsertQuery" : "",
+        "DeleteQuery" : "",
+        "FindByIdQuery" : "",
+        "UpdateQuery" : ""
+      }
+    }
+  }
 }
